Wrong file extension

--- a/tech/index.html
+++ b/tech/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Tech
 subtitle: Here's what I've been working on lately.
 description:
-featured_image: /images/Sidebar/tech.png
+featured_image: /images/Sidebar/tech.jpg
 ---
 
 <section class="intro">
