--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 title: Boris Budini
-description:
+description: DIY projects, system administration tips, broken code & more
 featured_image: /images/Sidebar/index.jpg
 ---
 
