Fix sidebar img

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Boris Budini
 description: DIY projects, system administration tips, broken code & more
-featured_image: /images/Sidebar/index.jpg
+featured_image: '/images/Sidebar/index.jpg'
 ---
 
 <section class="blog single">
