--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ featured_image: '/images/Sidebar/index.jpg'
 			</div>
 
 			{% if post.featured_image %}
-			<a href="{{ post.url }}" class="blog-post__image" style="background-image: url({{ post.featured_image  }});"></a>
+			<a href="{{ post.url }}" class="blog-post__image" style="background-image: url({{ post.featured_image  }}?{{site.time | date: '%s%N'}});"></a>
 			{% endif %}
 
 			<div class="blog-post__content">
