Did you see the Cats trailer?

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ featured_image: '/images/Sidebar/index.jpg'
 
 			<div class="blog-post__content">
 				<p>{{ post.excerpt }}</p>
-				<p><a href="{{ post.url }}" class="button">Dive in</a>
+				<p><a href="{{ post.url }}" class="button">Read more</a>
 			</div>
 
 		</article>
