--- a/pages/thoughts.html
+++ b/pages/thoughts.html
@@ -2,7 +2,7 @@
 layout: default
 title: Thoughts
 subtitle: Here's what I've been thinking lately.
-description:
+description: Here's what I've been thinking lately.
 featured_image: /images/Sidebar/thoughts.jpg
 ---
 
