--- a/pages/events.html
+++ b/pages/events.html
@@ -2,7 +2,7 @@
 layout: default
 title: Events
 subtitle: Here's what I've been attending lately.
-description:
+description: Here's what I've been attending lately.
 featured_image: /images/Sidebar/events.jpg
 ---
 
