--- a/pages/projects.html
+++ b/pages/projects.html
@@ -2,7 +2,7 @@
 layout: default
 title: Projects
 subtitle: What I've been breaking lately.
-description:
+description: What I've been breaking lately.
 featured_image: /images/Sidebar/projects.jpg
 ---
 
