--- a/pages/tech.html
+++ b/pages/tech.html
@@ -2,7 +2,7 @@
 layout: default
 title: Tech
 subtitle: Here's what I've been working on lately.
-description:
+description: Here's what I've been working on lately.
 featured_image: /images/Sidebar/tech.jpg
 ---
 
