--- a/search.html
+++ b/search.html
@@ -2,10 +2,10 @@
 layout: default
 title: Search
 description: 'Search for something'
-featured_image: '/images/Sidebar/index.jpg'
+featured_image: '/images/Sidebar/search.jpg'
 ---
 
-<center><h2>Are you looking for something specific?</h2></center>
+<center><h2 style="margin-bottom: 1%;">Are you looking for something specific?</h2></center>
 
   <div id="search-searchbar"></div>
 
