--- a/search.html
+++ b/search.html
@@ -5,7 +5,7 @@ description: 'Search for something'
 featured_image: '/images/Sidebar/search.jpg'
 ---
 
-<center><h2 style="margin-bottom: 1%;">Are you looking for something specific?</h2></center>
+<center><h2 style="margin-bottom: 1%;margin-top: 7%;">Are you looking for something specific?</h2></center>
 
   <div id="search-searchbar"></div>
 
