I think me fix it

--- a/search.html
+++ b/search.html
@@ -26,3 +26,24 @@ featured_image: '/images/Sidebar/search.jpg'
     {% endfor %}
   </div>
   {% include algolia.html %}
+<<script type="text/javascript">
+	search.addWidget(
+	  instantsearch.widgets.searchBox({
+	    container: '#search-searchbar',
+	    placeholder: 'Search into posts...',
+	    poweredBy: true // This is required if you're on the free Community plan
+	  })
+	);
+
+	search.addWidget(
+	  instantsearch.widgets.hits({
+	    container: '#search-hits',
+	    templates: {
+	      item: hitTemplate
+	    }
+	  })
+	);
+
+	search.start();
+
+</script>
