--- a/search.html
+++ b/search.html
@@ -26,7 +26,8 @@ featured_image: '/images/Sidebar/search.jpg'
     {% endfor %}
   </div>
   {% include algolia.html %}
-<<script type="text/javascript">
+
+<script type="text/javascript">
 	search.addWidget(
 	  instantsearch.widgets.searchBox({
 	    container: '#search-searchbar',
