--- a/search.html
+++ b/search.html
@@ -28,8 +28,8 @@ featured_image: '/images/Sidebar/search.jpg'
   {% include algolia.html %}
 
 <script type="text/javascript">
-	$(document).ready(function()
-{
+$(document).ready(function() {
+
 	search.addWidget(
 	  instantsearch.widgets.searchBox({
 	    container: '#search-searchbar',
@@ -46,6 +46,7 @@ featured_image: '/images/Sidebar/search.jpg'
 	    }
 	  })
 	);
+
 });
 
 	search.start();
