--- a/search.html
+++ b/search.html
@@ -26,28 +26,29 @@ featured_image: '/images/Sidebar/search.jpg'
     {% endfor %}
   </div>
   {% include algolia.html %}
-<script type="text/javascript">
-$(document).ready(function() {
 
-	search.addWidget(
-	  instantsearch.widgets.searchBox({
-	    container: '#search-searchbar',
-	    placeholder: 'Search into posts...',
-	    poweredBy: true // This is required if you're on the free Community plan
-	  })
-	);
-
-	search.addWidget(
-	  instantsearch.widgets.hits({
-	    container: '#search-hits',
-	    templates: {
-	      item: hitTemplate
-	    }
-	  })
-	);
-
-});
-
-	search.start();
-
+	<script type="text/javascript">
+	$.ajax({
+	  url: "test.html",
+	  context: document.body,
+	  success: function(){
+	    $(this).addClass("done");
+			search.addWidget(
+				instantsearch.widgets.searchBox({
+					container: '#search-searchbar',
+					placeholder: 'Search into posts...',
+					poweredBy: true // This is required if you're on the free Community plan
+				})
+			);
+			search.addWidget(
+				instantsearch.widgets.hits({
+					container: '#search-hits',
+					templates: {
+						item: hitTemplate
+					}
+				})
+			);
+			search.start();
+	  }
+	});
 </script>
