--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@ featured_image: '/images/Sidebar/index.jpg'
 
 			<div class="blog-post__header">
 				<h2 class="blog-post__title"><a href="{{ post.url }}">{{ post.title }}</a></h2>
-				<p class="blog-post__subtitle">{{ post.date | date_to_long_string }}</p>
 			</div>
 
 			{% if post.featured_image %}
@@ -24,7 +23,8 @@ featured_image: '/images/Sidebar/index.jpg'
 
 			<div class="blog-post__content">
 				<p>{{ post.excerpt }}</p>
-				<p><a href="{{ post.url }}" class="button">Read more</a>
+				<p class="blog-post__subtitle">Written on {{ post.date | date_to_long_string }}</p>
+				<p><a href="{{ post.url }}" class="button">Dive in</a>
 			</div>
 
 		</article>
